--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -56,7 +56,7 @@ footer {
     color: $light;
     background-color: $black;
 
-    a {
+    a:not(.btn) {
 
         &:link, &:active, &:visited {
             color: $light;
