Moving student view “Regulation” link to config.

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -596,7 +596,7 @@
                 </p>
             </div>
             <div id="regulation_link" class="mt-4">
-                <a href="http://unice.fr" target="_blank" class="btn btn-info btn-block">Consulter la règlementation</a>
+                <a href="{{ regulation_link }}" target="_blank" class="btn btn-info btn-block">Consulter la règlementation</a>
             </div>
         </section>
 
