--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -61,7 +61,9 @@
             <h5 class="mt-3">
                 Précisions (facultatif)
             </h5>
-            <small class="text-muted">ex: informations sur les examens, matériels interdits, pénalités de retard, d'abscences, d'orthographe, ...</small>
+            <small class="text-muted">
+                Exemple : informations sur les examens, le plagiat, matériels interdits, pénalités de retard, d'absences, d'orthographe, …
+            </small>
             {{form_widget(form.mccAdvice)}}
         </div>
     </div>
