--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -68,28 +68,35 @@
             <h4 class="font-weight-bold">Présentation du cours</h4>
             <hr class="border border-white bg-light" style="height: 2px;">
             <div class="row">
-                <div class="col-md d-flex align-items-center">
-                    {% set levelBeginnerColor = 'info'  %}
-                    {% set levelIntermediateColor = 'white'  %}
-                    {% set levelAdvancedColor = 'white'  %}
-                    {% set levelText = ''  %}
-                    {% if course.level == "beginner" %}
-                        {% set levelText = 'Niveau débutant'  %}
-                    {% elseif course.level == "intermediate" %}
-                        {% set levelIntermediateColor = 'info'  %}
-                        {% set levelText = 'Niveau intermédiare'  %}
-                    {% elseif course.level == "advanced" %}
-                        {% set levelIntermediateColor = 'info'  %}
-                        {% set levelAdvancedColor = 'info'  %}
-                        {% set levelText = 'Niveau avancé'  %}
+                <div class="col-md-6 mb-2">
+                    <div class="row mb-2">
+                        <div class="col-md align-self-center">
+                            {% set levelBeginnerColor = 'info'  %}
+                            {% set levelIntermediateColor = 'white'  %}
+                            {% set levelAdvancedColor = 'white'  %}
+                            {% set levelText = ''  %}
+                            {% if course.level == "beginner" %}
+                                {% set levelText = 'Niveau débutant'  %}
+                            {% elseif course.level == "intermediate" %}
+                                {% set levelIntermediateColor = 'info'  %}
+                                {% set levelText = 'Niveau intermédiare'  %}
+                            {% elseif course.level == "advanced" %}
+                                {% set levelIntermediateColor = 'info'  %}
+                                {% set levelAdvancedColor = 'info'  %}
+                                {% set levelText = 'Niveau avancé'  %}
+                            {% endif %}
+                            <i class="fas fa-circle text-{{ levelBeginnerColor }} rounded-circle border border-dark"></i>
+                            <i class="mx-1 fas fa-circle text-{{ levelIntermediateColor }} rounded-circle border border-dark"></i>
+                            <i class="fas fa-circle text-{{ levelAdvancedColor }} rounded-circle border border-dark"></i>
+                            <span class="px-3 text-white">{{ levelText }}</span>
+                        </div>
+                        <div class="col-md align-self-center border-left border-dark">
+                            <span class="text-white">Domaine disciplinaire : {{course.domain}}</span>
+                        </div>
+                    </div>
+                    {% if course.languages is not null %}
+                        <span>Ce cours est dispensé en : {{ course.languages }}</span>
                     {% endif %}
-                    <i class="fas fa-circle text-{{ levelBeginnerColor }} rounded-circle border border-dark"></i>
-                    <i class="mx-1 fas fa-circle text-{{ levelIntermediateColor }} rounded-circle border border-dark"></i>
-                    <i class="fas fa-circle text-{{ levelAdvancedColor }} rounded-circle border border-dark"></i>
-                    <span class="px-3 text-white">{{ levelText }}</span>
-                </div>
-                <div class="col-md d-flex align-items-center border-left border-dark">
-                    <span class="mx-3 text-white">Domaine disciplinaire : {{course.domain}}</span>
                 </div>
                 <div class="col-md-6">
                     {% if parent is not empty and parentInfo is not empty %}
