--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -128,7 +128,7 @@
 
                 </div>
 
-                <div id="course_info_panel" class="border mt-3 p-2">
+                <div id="course_info_panel" class="border mt-3 mb-4">
                     {% include 'course/edit_course_info_panel.html.twig' %}
                 </div>
 
