--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -16,11 +16,11 @@
 {% block main %}
     {% if course == null %}
         <div class="alert alert-danger" role="alert">
-            Le cours demandé n'a pas été retrouvé.
+            Le syllabus demandé n'a pas été retrouvé.
         </div>
     {% elseif course.publicationDate == null and coursePermissionHelper.hasPermission(course, app.user, constant('AppBundle\\Constant\\Permission::WRITE')) != true %}
         <div class="alert alert-warning" role="alert">
-            Le syllabus de ce cours n'est pas encore publié.
+            Le syllabus demandé n'est pas encore publié.
         </div>
     {% else %}
         {% set parent = course.course.parents[0] %}
