--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -69,7 +69,12 @@
                 <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
                     {{ form_widget(form.image) }}
                     {% if form.vars.data.image is not null %}
-                    <img class="img-thumbnail" id="media_image" src="{{ asset('data/' ~ form.vars.data.image.filename) }}">
+                        {% if courseInfo.image == form.vars.data.image %}
+                            {% set imgSrc = form.vars.data.image.filename %}
+                        {% else %}
+                            {% set imgSrc = courseInfo.image %}
+                        {% endif %}
+                        <img class="img-thumbnail" id="media_image" src="{{ asset('data/' ~ imgSrc) }}">
                     {% endif %}
                 </div>
                 <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
