--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -153,7 +153,7 @@
                         </div>
                     {% endif %}
                     {% if course.mediaType == "image" %}
-                        <img src={{ asset('data/' ~ course.image) }} class="img-fluid" alt="Responsive image">
+                        <img src={{ asset('data/' ~ course.image) }} class="img-fluid">
                     {% endif %}
                 </div>
             </div>
