--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -512,17 +512,17 @@
                         </div>
                         <div class="col-md d-flex align-items-center">
                             <i class="fas fa-4x fa-check-circle text-info"></i>
-                            <strong class="px-2">UE compensable</strong>
+                            <strong class="px-2">{{course.course.type}} compensable</strong>
                             <i class="fas fa-info-circle"></i>
                         </div>
                         <div class="col-md d-flex align-items-center ">
                             {% if course.mccCapitalizable == false %}
                                 <i class="fas fa-4x fa-times-circle text-info"></i>
-                                <strong class="px-2">UE non capitalisable</strong>
+                                <strong class="px-2">{{course.course.type}} non capitalisable</strong>
                                 <i class="fas fa-info-circle"></i>
                             {% else %}
                                 <i class="fas fa-4x fa-check-circle text-info"></i>
-                                <strong class="px-2">UE capitalisable</strong>
+                                <strong class="px-2">{{course.course.type}} capitalisable</strong>
                                 <i class="fas fa-info-circle"></i>
                             {% endif %}
                         </div>
