--- a/app/Resources/views/form/evaluations_field.html.twig
+++ b/app/Resources/views/form/evaluations_field.html.twig
@@ -24,11 +24,11 @@
             <div class="row">
                 <div class="col-10 pr-1">
                     {{ form_widget(evaluation.description) }}
-                    <label placeholder="Préciser *"></label>
+                    <label placeholder="Préciser"></label>
                 </div>
                 <div class="col-2 pl-1">
                     {{ form_widget(evaluation.evaluationRate) }}
-                    <label placeholder="% *"></label>
+                    <label placeholder="%"></label>
                 </div>
             </div>
             {{ form_widget(evaluation.activity) }}
