--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -35,7 +35,7 @@
         <div class="col container-evaluations">
             <div class="row">
                 <div class="col">
-                    <h4>Evaluation Terminale</h4>
+                    <h4>Évaluation terminale</h4>
                 </div>
             </div>
             <div class="row">
