--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -11,21 +11,17 @@
     {{ form_start(form) }}
 
     <div class="row mt-3">
-        <div class="col">
+        <div class="col border ml-3 mr-1 p-1">
             <h6 class="my-3">
                 Matériel nécessaire
             </h6>
-            <div class="row">
-                <div class="col border ml-3 mr-3 p-1">
-                    {{form_widget(form.listEquipments)}}
-                </div>
-                <div class="col border ml-3 mr-3 p-1">
-                    <div class="text-muted font-italic text-center p-2">
-                        Glisser / déposer ici le matériel nécessaire
-                    </div>
-                    {{form_widget(form.equipments)}}
-                </div>
-            </div>
+            {{form_widget(form.listEquipments)}}
+        </div>
+        <div class="col border ml-1 mr-3 p-1">
+            <p class="text-muted font-italic text-center p-2">
+                Glisser / déposer ici le matériel nécessaire…
+            </p>
+            {{form_widget(form.equipments)}}
         </div>
     </div>
     <div class="row mt-3">
